# gitsummarize

./: .env.template  .gitignore  LICENSE  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  dependency-update.yml  security.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  app.py  pyproject.toml
backend/crons/: repo_metadata_cron.py
backend/src/gitsummarize/auth/: key_manager.py
backend/src/gitsummarize/clients/: github.py  google_genai.py  supabase.py
backend/src/gitsummarize/model/: repo_metadata.py
backend/src/gitsummarize/prompts/: resource_repo.py  technical_documentation.py
backend/src/scripts/: get_popular_gh_repos.py
frontend/: .dockerignore  .env.template  Dockerfile  LICENSE  README.md  next.config.js  package-lock.json  package.json
frontend/src/: env.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/[username]/[repo]/: page.tsx
frontend/src/app/_actions/: github.ts
frontend/src/app/api/generate/: route.ts
frontend/src/app/api/health/: route.ts
frontend/src/components/: api-key-dialog.tsx  copy-button.tsx  customization-dropdown.tsx  export-dropdown.tsx  footer.tsx  header.tsx  hero.tsx  loading.tsx  main-card.tsx  private-repos-dialog.tsx
frontend/src/components/ui/: switch.tsx
frontend/src/lib/: exampleRepos.ts  github.ts  supabase.ts
frontend/src/server/db/: schema.ts
frontend/src/styles/: globals.css
nginx/: nginx.conf
src/gitsummarize/auth/: auth.py  key_manager.py
src/gitsummarize/clients/: ai_client_abc.py  github.py  google_genai.py  openai.py  supabase.py
src/gitsummarize/constants/: constants.py
src/gitsummarize/exceptions/: exceptions.py
src/gitsummarize/prompts/: business_logic.py  technical_documentation.py
src/scripts/: get_popular_gh_repos.py  precache_repos.py
